5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1578_1330.log
== TEST (2019-03-14 19:37:08) 
-- CODE:
print(round(x, 2) 250 / 6)
-- ERROR:
File "XXXX", line 1
    print(round(x, 2) 250 / 6)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:37:20) 
-- CODE:
print(round(250 / 6, 2) 250 / 6)
-- ERROR:
File "XXXX", line 1
    print(round(250 / 6, 2) 250 / 6)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:37:56) 
-- CODE:
print(round(41, 2) 250 / 6)
-- ERROR:
File "XXXX", line 1
    print(round(41, 2) 250 / 6)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:07) 
-- CODE:
print( 250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:34) 
-- CODE:
print(250 / 6 round(x, 2))
-- ERROR:
File "XXXX", line 1
    print(250 / 6 round(x, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:43:49) 
-- CODE:
print(250 / 6 round(250 / 6, 2))
-- ERROR:
File "XXXX", line 1
    print(250 / 6 round(250 / 6, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:06:16) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.188688
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:41) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.137654
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:34:31) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.12698
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:33:21) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.163572
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:59:14) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.128868
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:36:37) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.14229
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
